--- a/style.css
+++ b/style.css
@@ -1,5 +1,158 @@
 body {
-    width: 1440px;
+    max-width: 576px;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 10%;
+    max-width: 576px;
+    width: 100vw;
+    height:123px;
+    background-color: rgb(255, 255, 255);
+    position: fixed;
+    top: 0vh;
+}
+
+nav {
+    margin-top: 25px;
+    text-align: center;
+    max-width: 576px;
+    width: 90vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-content: center;
+    
+}
+
+.hidden {
+    visibility: hidden;
+}
+
+nav a {
+    margin: 0px 3%;
+    margin-top: -17.5px;
+}
+
+/*nav img {
+    margin-left: 2.5%;
+    margin-top: -35px;
+    
+}*/
+
+.hidden {
+    visibility: hidden;
+    width: 0px;
+}
+
+.imgButtons {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+}
+
+.imgDiv {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.img {
+    max-width: 200px;
+    max-height: 150px;
+    width: 100%;
+    height: 100%;
+}
+
+#search, #cart {
+    
+    margin-right: 5%;
+}
+
+.mobileImage {
+    height: 800px;
+    max-width: 576px;
+    width: 100vw;
+    text-align: left;
+
+}
+
+.mobileImage h1 {
+    font-size: 24px;
+    font-family: 'IBM', Arial, Helvetica, sans-serif;
+    font-weight: 300;
+}
+
+.mobileImage button {
+    
+border:none;
+}
+
+#mobileImage1 {
+    background-color: #EDEDED;
+}
+
+@font-face {
+    font-family: 'IBM';
+    src: url('fonts/IBM/IBMPlexSans-Regular.eot'); 
+    src: url('fonts/IBM/IBMPlexSans-Regular.eot?#iefix') format('embedded-opentype'), 
+        url('fonts/IBM/IBMPlexSans-Regular.woff2') format('woff2'), 
+        url('fonts/IBM/IBMPlexSans-Regular.woff') format('woff'), 
+        url('fonts/IBM/IBMPlexSans-Regular.ttf')  format('truetype');
+  }
+
+.productHeader {
+    margin-top: 216px;
+    margin-bottom: -10px;
+}
+
+.marginLeft {
+    margin-left: 5%;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+@media screen and (min-width: 576px) {
+
+    nav {
+        margin-top: 35px;
+        max-width: 1440px;
+    width: 90vw;
+    }
+
+    #cart {
+        margin-left: 0px;
+    }
+
+    header {
+        max-width: 1440px;
+        width: 100vw;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-items: center;
+
+    }
+
+body {
+
+    max-width: 1440px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,12 +173,24 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
-.img {
-    width: 200px;
-    height: 150px;
+.imgdiv button {
+    margin: 5% 0px;
 }
 
+
+.hidden {
+    visibility: visible;
+}
+
+.mobileImage {
+    visibility: hidden;
+    width: 0px;
+    height: 0px;
+}
+
+}
 
 
