--- a/style.css
+++ b/style.css
@@ -150,6 +150,10 @@ border:none;
     background-color: inherit;
 }
 
+#message {
+    visibility: hidden;
+}
+
 @font-face {
     font-family: 'IBM';
     src: url('fonts/IBM/IBMPlexSans-Regular.eot'); 
