--- a/style.css
+++ b/style.css
@@ -20,8 +20,9 @@ header {
     max-width: 576px;
     width: 100vw;
     height:123px;
-    background-color: rgb(255, 255, 255);
+    background-color: transparent;
     position: fixed;
+    z-index: 2;
     top: 0vh;
 }
 
@@ -50,6 +51,20 @@ nav a {
     visibility: hidden;
     width: 0px;
     height: 0px;
+}
+
+#hamburgerMenu {
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    top: 123px;
+    left: 0px;
+    width: 50vw;
+    height: 300px;
+    background-color: white;
+    z-index: 2;
 }
 
 .imgButtons {
@@ -151,7 +166,7 @@ border:none;
 }
 
 #message {
-    visibility: hidden;
+    visibility: visible;
 }
 
 @font-face {
@@ -181,6 +196,7 @@ a {
     height: 450px;
     background-color: #D9D9D9;
     position: relative;
+    z-index: 1;
     display: flex;
     flex-direction: column;
     align-items: center;
