--- a/Arbete med andra klasser/style.css
+++ b/Arbete med andra klasser/style.css
@@ -38,10 +38,6 @@ nav {
     
 }
 
-.hidden {
-    visibility: hidden;
-}
-
 nav a {
     margin: 0px 3%;
     margin-top: -17.5px;
@@ -57,14 +53,34 @@ nav a {
     position: fixed;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    top: 123px;
-    left: 0px;
+    justify-content: flex-start;
+    top: 0px;
+    right: 0vw;
     width: 50vw;
-    height: 300px;
+    height: 800px;
     background-color: white;
     z-index: 2;
+}
+
+#hamburgerMenu a {
+    border-bottom: 1px solid grey;
+    height: 91px;
+    width: 47vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 3vw;
+
+}
+
+#hamburgerLogos {
+    height: 91px;
+    width: 50vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .imgButtons {
