--- a/Arbete med andra klasser/style.css
+++ b/Arbete med andra klasser/style.css
@@ -76,7 +76,7 @@ nav a {
 
 #hamburgerLogos {
     height: 91px;
-    width: 50vw;
+    width: 45vw;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -173,18 +173,32 @@ border:none;
     justify-content: space-between;
 }
 
-.mobileImageText {
-    position: fixed;
-    top:0px;
+#mainImage {
+    width: 90vw;
+}
+
+.mobileImageText, #mainText {
+    position: absolute;
+    top: 114px;
     right:0px;
     background-color: white;
-    height: 100vh;
-    width: 50vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 388px;
+    width: 40vw;
     z-index: 3;
+    padding: 5vw;
+}
+
+#mainText {
+    top:310px;
 }
 
 .smallerMobileImages {
     height: 518px;
+    position: relative;
 }
 
 .smallerMobileImages .productHeader {
