--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+    margin: 0px;
     max-width: 576px;
     width: 100vw;
     display: flex;
@@ -38,10 +39,6 @@ nav {
     
 }
 
-.hidden {
-    visibility: hidden;
-}
-
 nav a {
     margin: 0px 3%;
     margin-top: -17.5px;
@@ -57,14 +54,34 @@ nav a {
     position: fixed;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: flex-start;
-    top: 123px;
-    left: 0px;
+    justify-content: flex-start;
+    top: 0px;
+    right: 0vw;
     width: 50vw;
-    height: 300px;
+    height: 800px;
     background-color: white;
     z-index: 2;
+}
+
+#hamburgerMenu a {
+    border-bottom: 1px solid grey;
+    height: 91px;
+    width: 47vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding-left: 3vw;
+
+}
+
+#hamburgerLogos {
+    height: 91px;
+    width: 45vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .imgButtons {
@@ -98,7 +115,6 @@ nav a {
     max-width: 576px;
     width: 100vw;
     text-align: left;
-
 }
 
 .mobileImage h1 {
@@ -106,27 +122,75 @@ nav a {
     font-weight: 300;
 }
 
+#mailh1 {
+    margin-bottom: 35px;
+}
+
 .mobileImage button {
     
 border:none;
 }
 
-#mobileImage1 {
-    background-color: #EDEDED;
-    height: 800px;
+#borderButton {
+    border: 2px solid black;
+    padding: 8px 20px;
+    font-size: 16px;
+}
+
+.blackButton {
+    margin-top: 10px;
+    background-color: black;
+    color: white;
 }
 
 #firstImageFooter {
     height: 69px;
-    background-color: #D9D9D9;
+    background-color: white;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-evenly;
 }
 
+#firstImageFooter img {
+    width: 36px;
+    
+}
+
+#firstImageFooter div{
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#mainImage {
+    width: 90vw;
+}
+
+.mobileImageText, #mainText {
+    position: absolute;
+    top: 114px;
+    right:0px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    height: 388px;
+    width: 40vw;
+    z-index: 3;
+    padding: 5vw;
+}
+
+#mainText {
+    top:310px;
+}
+
 .smallerMobileImages {
     height: 518px;
+    position: relative;
 }
 
 .smallerMobileImages .productHeader {
@@ -147,7 +211,9 @@ border:none;
 
 .smallerMobileImages .readMore {
     
-    background-color: inherit;
+    background-color: black;
+    color: white;
+    height: 50px;
     margin-top: 280px;
 }
 
@@ -158,11 +224,11 @@ border:none;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    background-color: inherit;
+    background-color: transparent;
 }
 
 .circles button {
-    background-color: inherit;
+    background-color: transparent
 }
 
 #message {
@@ -183,53 +249,84 @@ border:none;
     margin-bottom: -10px;
 }
 
-.marginLeft {
-    margin-left: 5%;
-}
-
 a {
     text-decoration: none;
     color: black;
 }
 
+.marginLeft {
+    margin-left: 5%;
+}
+
 #newsLetter {
-    height: 450px;
-    background-color: #D9D9D9;
+    background-color: #EDEDED;
+    height: 800px;
     position: relative;
     z-index: 1;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
-    text-align: center;
+    text-align: left;
     font-size: 16px;
 }
 
-#newsLetter .circles {
-
-    position:absolute;
-    top: 380px;
-}
-
-#mail, #form {
+#mail {
+    top: 0px;
     position: absolute;
-    top: 80px;
-    margin-top: 0px;
+    text-align: left;
+    z-index: 1;
+    width: 100vw;
+    height: 800px;
 }
 
 #form {
+    position: fixed;
+    height: 480px;
+    margin: 0px;
+    width: 80vw;
+    background-color: white;
+    top: 0px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
+    z-index: 2;
 }
-#arrow, #arrowButton {
-    background-color: #D9D9D9;
-    margin-top: 30px;
+
+#form h3 {
+    width: 20vw;
+}
+
+input {
+    width: 70vw;
+border-bottom: 1px solid black;
+border-top: none; 
+border-right: none; 
+border-left: none; 
+    
+}
+
+#arrowButton {
+    background-color: inherit;
+    margin-top: 80px;
+}
+
+#arrow {
+width: 40px;
+height: 40px;
+background-color: inherit;
+}
+
+#x {
+    position: absolute;
+    top: 15px;
+    right: 10px;
+    background-color: transparent;
 }
 
 #emailInput {
-    margin: 50px 0px;
+    margin-top: 50px;
 }
 
 #smallLabel {
@@ -238,14 +335,93 @@ a {
     margin-left: 5%;
 }
 
-footer {
-    height: 241px;
-    background-color: #5C5B5B;
+#downloadApp {
+    height: 530px;
+    width: inherit;
     display: flex;
     flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: flex-start;
+}
+
+#phones {
+    height: 458px;
+    margin-top: -50px;
+    margin-bottom: -150px;
+}
+
+#downloadApp h3 {
+    font-size: 20px;
+    font-weight: 500;
+}
+#downloadApp p {
+    text-align: left;
+    width: 60vw;
+    font-size: 16px;
+    font-weight: 500;
+}
+
+#logosAndButton {
     width: inherit;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 15px;
+}
+
+#logosAndButton img {
+    margin-right: 3vw;
+}
+
+footer {
+    height: 279px;
+    background-color: #9C9C9C;
+    width: inherit;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+}
+
+footer form {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#left, #right {
+    margin: 0px 5vw;
+}
+
+#right {
+    padding-right: 10vw;
+}
+
+#left p {
+    width: 60%;
+}
+
+.smallMailInput {
+    width: 90%;
+    height: 20px;
+    background-color: transparent;
+    font-size: 14px;
+}
+
+#smallButton, #smallArrow {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    background-color: transparent;
+}
+
+#smallArrow {
+    margin-bottom: -10px;
+}
+
+#smallButton {
+    border-bottom: 1px solid black;
+    margin-bottom: 6px;
 }
 
 @media screen and (min-width: 576px) {
