Changes for mobile after feedback

--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ header {
 }
 
 nav {
-    margin-top: 25px;
+    margin-top: -50px;
     text-align: center;
     max-width: 576px;
     width: 90vw;
@@ -55,18 +55,18 @@ nav a {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    top: 0px;
-    right: 0vw;
-    width: 50vw;
+    top: 75px;
+    left: 0vw;
+    width: 65vw;
     height: 800px;
     background-color: white;
     z-index: 2;
 }
 
 #hamburgerMenu a {
-    border-bottom: 1px solid grey;
+    border-bottom: 1px solid rgb(226, 226, 226);
     height: 91px;
-    width: 47vw;
+    width: calc(inherit + 3vw);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -77,11 +77,12 @@ nav a {
 
 #hamburgerLogos {
     height: 91px;
-    width: 45vw;
+    width: inherit;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
     align-items: center;
+    border-bottom: 1px solid rgb(226, 226, 226);
 }
 
 .imgButtons {
@@ -111,6 +112,13 @@ nav a {
     margin-right: 5%;
 }
 
+#ham, #logo {
+    margin-left: 3%;
+
+}
+
+
+
 .mobileImage {
     max-width: 576px;
     width: 100vw;
@@ -132,7 +140,6 @@ border:none;
 }
 
 #borderButton {
-    border: 2px solid black;
     padding: 8px 20px;
     font-size: 16px;
 }
@@ -154,15 +161,21 @@ border:none;
 
 #firstImageFooter img {
     width: 36px;
-    
 }
 
 #firstImageFooter div{
+    width: 25vw;
     font-size: 12px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+#firstImageFooter span {
+    width: 33vw;
+    text-align: center;
+
 }
 
 #mainImage {
@@ -178,7 +191,7 @@ border:none;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    height: 388px;
+    height: 340px;
     width: 40vw;
     z-index: 3;
     padding: 5vw;
@@ -228,7 +241,7 @@ border:none;
 }
 
 .circles button {
-    background-color: transparent
+    background-color: transparent;
 }
 
 #message {
@@ -286,16 +299,27 @@ a {
     margin: 0px;
     width: 80vw;
     background-color: white;
-    top: 0px;
+    top: 100px;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
+    justify-content: center;
     z-index: 2;
 }
 
+.checkMarks {
+   font-size: 28px;
+   visibility: hidden;
+   
+}
+
+footer form .checkMarks {
+    margin-top: 15px;
+    border-bottom: 1px solid white;
+}
+
 #form h3 {
-    width: 20vw;
+    width: 90%;
 }
 
 input {
@@ -304,12 +328,15 @@ border-bottom: 1px solid black;
 border-top: none; 
 border-right: none; 
 border-left: none; 
+margin-top: 30px;
     
 }
 
+
 #arrowButton {
     background-color: inherit;
-    margin-top: 80px;
+    margin-top: 30px;
+    box-shadow: none;
 }
 
 #arrow {
@@ -336,7 +363,7 @@ background-color: inherit;
 }
 
 #downloadApp {
-    height: 530px;
+    height: 691px;
     width: inherit;
     display: flex;
     flex-direction: column;
@@ -346,7 +373,7 @@ background-color: inherit;
 
 #phones {
     height: 458px;
-    margin-top: -50px;
+    margin-top: -54px;
     margin-bottom: -150px;
 }
 
@@ -376,11 +403,13 @@ background-color: inherit;
 
 footer {
     height: 279px;
-    background-color: #9C9C9C;
+    background-color: black;
+    color: white;
     width: inherit;
     display: grid;
     grid-template-columns: 1fr 1fr;
     align-items: center;
+    text-align: left;
 }
 
 footer form {
@@ -406,6 +435,10 @@ footer form {
     height: 20px;
     background-color: transparent;
     font-size: 14px;
+    border-bottom: 1px solid white;
+    margin-right: 0px;
+    color: white;
+    
 }
 
 #smallButton, #smallArrow {
@@ -415,21 +448,25 @@ footer form {
     background-color: transparent;
 }
 
-#smallArrow {
-    margin-bottom: -10px;
+#smallButton {
+    border-bottom: 1px solid white;
+    margin-bottom: -22px;
 }
 
-#smallButton {
-    border-bottom: 1px solid black;
-    margin-bottom: 6px;
+#smallArrow {
+    margin-right: -5px;
 }
 
 @media screen and (min-width: 576px) {
 
+    body {
+
+        max-width: 1440px;  
+    }
+
     nav {
         margin-top: 35px;
         max-width: 1440px;
-    width: 90vw;
     }
 
     #cart {
@@ -437,8 +474,8 @@ footer form {
     }
 
     header {
-        max-width: 1440px;
-        width: 100vw;
+        max-width: inherit;
+        width: initial;
         display: flex;
         flex-direction: row;
         align-items: center;
@@ -446,22 +483,13 @@ footer form {
 
     }
 
-body {
-
-    max-width: 1440px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-}
-
 .imgButtons {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 100%;
+    width: inherit;
+    max-width: inherit;
 }
 
 .imgDiv {
@@ -469,11 +497,16 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 30vw;
+    height: 700px;
+    border: 1px solid red;
+    position: relative;
 }
 
-.imgdiv button {
-    margin: 5% 0px;
+.slide {
+    position: absolute;
+    top: 350px;
+    right: 1vw;
 }
 
 
