--- a/style.css
+++ b/style.css
@@ -1,498 +1,500 @@
 body {
-    margin: 0px;
-    max-width: 576px;
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    font-family: 'IBM', Arial, Helvetica, sans-serif;
-
+  margin: 0px;
+  max-width: 576px;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: "IBM", Arial, Helvetica, sans-serif;
 }
 
 header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-bottom: 10%;
-    max-width: 576px;
-    width: 100vw;
-    height:123px;
-    background-color: transparent;
-    position: fixed;
-    z-index: 2;
-    top: 0vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 10%;
+  max-width: 576px;
+  width: 100vw;
+  height: 123px;
+  background-color: transparent;
+  position: fixed;
+  z-index: 2;
+  top: 0vh;
 }
 
 nav {
-    margin-top: -50px;
-    text-align: center;
-    max-width: 576px;
-    width: 90vw;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-content: center;
-    
+  margin-top: -50px;
+  text-align: center;
+  max-width: 576px;
+  width: 90vw;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-content: center;
 }
 
 nav a {
-    margin: 0px 3%;
-    margin-top: -17.5px;
+  margin: 0px 3%;
+  margin-top: -17.5px;
 }
 
 .hidden {
-    visibility: hidden;
-    width: 0px;
-    height: 0px;
+  visibility: hidden;
+  width: 0px;
+  height: 0px;
+}
+
+.hideForDesktop {
+  visibility: visible;
 }
 
 #hamburgerMenu {
-    position: fixed;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    top: 75px;
-    left: 0vw;
-    width: 65vw;
-    height: 800px;
-    background-color: white;
-    z-index: 2;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  top: 75px;
+  left: 0vw;
+  width: 65vw;
+  height: 800px;
+  background-color: white;
+  z-index: 2;
 }
 
 #hamburgerMenu a {
-    border-bottom: 1px solid rgb(226, 226, 226);
-    height: 91px;
-    width: calc(inherit + 3vw);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    padding-left: 3vw;
-
+  border-bottom: 1px solid rgb(226, 226, 226);
+  height: 91px;
+  width: calc(inherit + 3vw);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding-left: 3vw;
 }
 
 #hamburgerLogos {
-    height: 91px;
-    width: inherit;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
-    border-bottom: 1px solid rgb(226, 226, 226);
+  height: 91px;
+  width: inherit;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  border-bottom: 1px solid rgb(226, 226, 226);
 }
 
 .imgButtons {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
 }
 
 .imgDiv {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .img {
-    max-width: 200px;
-    max-height: 150px;
-    width: 100%;
-    height: 100%;
+  max-width: 200px;
+  max-height: 150px;
+  width: 100%;
+  height: 100%;
 }
 
-#search, #cart {
-    
-    margin-right: 5%;
+#search,
+#cart {
+  margin-right: 5%;
 }
 
-#ham, #logo {
-    margin-left: 3%;
-
+#ham,
+#logo {
+  margin-left: 3%;
 }
-
-
 
 .mobileImage {
-    max-width: 576px;
-    width: 100vw;
-    text-align: left;
+  max-width: 576px;
+  width: 100vw;
+  text-align: left;
 }
 
 .mobileImage h1 {
-    font-size: 24px;
-    font-weight: 300;
+  font-size: 24px;
+  font-weight: 300;
 }
 
 #mailh1 {
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
 
 .mobileImage button {
-    
-border:none;
+  border: none;
 }
 
 #borderButton {
-    padding: 8px 20px;
-    font-size: 16px;
+  padding: 8px 20px;
+  font-size: 16px;
 }
 
 .blackButton {
-    margin-top: 10px;
-    background-color: black;
-    color: white;
+  margin-top: 10px;
+  background-color: black;
+  color: white;
 }
 
 #firstImageFooter {
-    height: 69px;
-    background-color: white;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
+  height: 69px;
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 #firstImageFooter img {
-    width: 36px;
+  width: 36px;
 }
 
-#firstImageFooter div{
-    width: 25vw;
-    font-size: 12px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
+#firstImageFooter div {
+  width: 25vw;
+  font-size: 12px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 
 #firstImageFooter span {
-    width: 33vw;
-    text-align: center;
-
+  width: 33vw;
+  text-align: center;
 }
 
 #mainImage {
-    width: 90vw;
+  width: 90vw;
 }
 
-.mobileImageText, #mainText {
-    position: absolute;
-    top: 114px;
-    right:0px;
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
-    height: 340px;
-    width: 40vw;
-    z-index: 3;
-    padding: 5vw;
+.mobileImageText,
+#mainText {
+  position: absolute;
+  top: 114px;
+  right: 0px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  height: 340px;
+  width: 40vw;
+  z-index: 3;
+  padding: 5vw;
 }
 
 #mainText {
-    top:310px;
+  top: 310px;
 }
 
 .smallerMobileImages {
-    height: 518px;
-    position: relative;
+  height: 518px;
+  position: relative;
 }
 
 .smallerMobileImages .productHeader {
-    margin-top: 45px;
+  margin-top: 45px;
 }
 
 #mobileImage2 {
-    background-color: #C6C6C6;
+  background-color: #c6c6c6;
 }
 
 #mobileImage3 {
-    background-color: #7E7E7E;
+  background-color: #7e7e7e;
 }
 
 #mobileImage4 {
-    background-color: #A59B9B;
+  background-color: #a59b9b;
 }
 
 .smallerMobileImages .readMore {
-    
-    background-color: black;
-    color: white;
-    height: 50px;
-    margin-top: 280px;
+  background-color: black;
+  color: white;
+  height: 50px;
+  margin-top: 280px;
 }
 
 .circles {
-   margin-top: 10px;
-    width: inherit;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    background-color: transparent;
+  margin-top: 10px;
+  width: inherit;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: transparent;
 }
 
 .circles button {
-    background-color: transparent;
+  background-color: transparent;
 }
 
 #message {
-    visibility: visible;
+  visibility: visible;
 }
 
 @font-face {
-    font-family: 'IBM';
-    src: url('fonts/IBM/IBMPlexSans-Regular.eot'); 
-    src: url('fonts/IBM/IBMPlexSans-Regular.eot?#iefix') format('embedded-opentype'), 
-        url('fonts/IBM/IBMPlexSans-Regular.woff2') format('woff2'), 
-        url('fonts/IBM/IBMPlexSans-Regular.woff') format('woff'), 
-        url('fonts/IBM/IBMPlexSans-Regular.ttf')  format('truetype');
-  }
+  font-family: "IBM";
+  src: url("fonts/IBM/IBMPlexSans-Regular.eot");
+  src: url("fonts/IBM/IBMPlexSans-Regular.eot?#iefix")
+      format("embedded-opentype"),
+    url("fonts/IBM/IBMPlexSans-Regular.woff2") format("woff2"),
+    url("fonts/IBM/IBMPlexSans-Regular.woff") format("woff"),
+    url("fonts/IBM/IBMPlexSans-Regular.ttf") format("truetype");
+}
 
 .productHeader {
-    margin-top: 216px;
-    margin-bottom: -10px;
+  margin-top: 216px;
+  margin-bottom: -10px;
 }
 
 a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .marginLeft {
-    margin-left: 5%;
+  margin-left: 5%;
 }
 
 #newsLetter {
-    background-color: #EDEDED;
-    height: 800px;
-    position: relative;
-    z-index: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-    text-align: left;
-    font-size: 16px;
+  background-color: #ededed;
+  height: 800px;
+  position: relative;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  text-align: left;
+  font-size: 16px;
 }
 
 #mail {
-    top: 0px;
-    position: absolute;
-    text-align: left;
-    z-index: 1;
-    width: 100vw;
-    height: 800px;
+  top: 0px;
+  position: absolute;
+  text-align: left;
+  z-index: 1;
+  width: 100vw;
+  height: 800px;
 }
 
 #form {
-    position: fixed;
-    height: 480px;
-    margin: 0px;
-    width: 80vw;
-    background-color: white;
-    top: 100px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    z-index: 2;
+  position: fixed;
+  height: 480px;
+  margin: 0px;
+  width: 80vw;
+  background-color: white;
+  top: 100px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
 }
 
 .checkMarks {
-   font-size: 28px;
-   visibility: hidden;
-   
+  font-size: 28px;
+  visibility: hidden;
 }
 
 footer form .checkMarks {
-    margin-top: 15px;
-    border-bottom: 1px solid white;
+  margin-top: 15px;
+  border-bottom: 1px solid white;
 }
 
 #form h3 {
-    width: 90%;
+  width: 90%;
 }
 
 input {
-    width: 70vw;
-border-bottom: 1px solid black;
-border-top: none; 
-border-right: none; 
-border-left: none; 
-margin-top: 30px;
-    
+  width: 70vw;
+  border-bottom: 1px solid black;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  margin-top: 30px;
 }
 
-
 #arrowButton {
-    background-color: inherit;
-    margin-top: 30px;
-    box-shadow: none;
+  background-color: inherit;
+  margin-top: 30px;
+  box-shadow: none;
 }
 
 #arrow {
-width: 40px;
-height: 40px;
-background-color: inherit;
+  width: 40px;
+  height: 40px;
+  background-color: inherit;
 }
 
 #x {
-    position: absolute;
-    top: 15px;
-    right: 10px;
-    background-color: transparent;
+  position: absolute;
+  top: 15px;
+  right: 10px;
+  background-color: transparent;
 }
 
 #emailInput {
-    margin-top: 50px;
+  margin-top: 50px;
 }
 
 #smallLabel {
-    text-align: left;
-    font-size: 10px;
-    margin-left: 5%;
+  text-align: left;
+  font-size: 10px;
+  margin-left: 5%;
 }
 
 #downloadApp {
-    height: 691px;
-    width: inherit;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: flex-start;
+  height: 691px;
+  width: inherit;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 #phones {
-    height: 458px;
-    margin-top: -54px;
-    margin-bottom: -150px;
+  height: 458px;
+  margin-top: -54px;
+  margin-bottom: -150px;
 }
 
 #downloadApp h3 {
-    font-size: 20px;
-    font-weight: 500;
+  font-size: 20px;
+  font-weight: 500;
 }
 #downloadApp p {
-    text-align: left;
-    width: 60vw;
-    font-size: 16px;
-    font-weight: 500;
+  text-align: left;
+  width: 60vw;
+  font-size: 16px;
+  font-weight: 500;
 }
 
 #logosAndButton {
-    width: inherit;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: flex-start;
-    margin-top: 15px;
+  width: inherit;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 15px;
 }
 
 #logosAndButton img {
-    margin-right: 3vw;
+  margin-right: 3vw;
 }
 
 footer {
-    height: 279px;
-    background-color: black;
-    color: white;
-    width: inherit;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    align-items: center;
-    text-align: left;
+  height: 279px;
+  background-color: black;
+  color: white;
+  width: inherit;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  text-align: left;
 }
 
 footer form {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
-#left, #right {
-    margin: 0px 5vw;
+#left,
+#right {
+  margin: 0px 5vw;
 }
 
 #right {
-    padding-right: 10vw;
+  padding-right: 10vw;
 }
 
 #left p {
-    width: 60%;
+  width: 60%;
 }
 
 .smallMailInput {
-    width: 90%;
-    height: 20px;
-    background-color: transparent;
-    font-size: 14px;
-    border-bottom: 1px solid white;
-    margin-right: 0px;
-    color: white;
-    
+  width: 90%;
+  height: 20px;
+  background-color: transparent;
+  font-size: 14px;
+  border-bottom: 1px solid white;
+  margin-right: 0px;
+  color: white;
 }
 
-#smallButton, #smallArrow {
-    margin: 0px;
-    padding: 0px;
-    border: none;
-    background-color: transparent;
+#smallButton,
+#smallArrow {
+  margin: 0px;
+  padding: 0px;
+  border: none;
+  background-color: transparent;
 }
 
 #smallButton {
-    border-bottom: 1px solid white;
-    margin-bottom: -22px;
+  border-bottom: 1px solid white;
+  margin-bottom: -22px;
 }
 
 #smallArrow {
-    margin-right: -5px;
+  margin-right: -5px;
 }
 
 @media screen and (min-width: 576px) {
+  body {
+    max-width: 1440px;
+  }
 
-    body {
+  nav {
+    margin-top: 15px;
+    max-width: 1440px;
+  }
 
-        max-width: 1440px;  
-    }
+  #cart {
+    margin-left: 0px;
+  }
 
-    nav {
-        margin-top: 35px;
-        max-width: 1440px;
-    }
+  header {
+    max-width: inherit;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-items: center;
+  }
 
-    #cart {
-        margin-left: 0px;
-    }
+  nav a {
+    margin: auto;
+  }
 
-    header {
-        max-width: inherit;
-        width: initial;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-items: center;
+  nav a:hover {
+    cursor: pointer;
+    text-decoration: underline;
+  }
 
-    }
-
-.imgButtons {
+  .imgButtons {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     width: inherit;
     max-width: inherit;
-}
+  }
 
-.imgDiv {
+  .imgDiv {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -501,25 +503,63 @@ footer form {
     height: 700px;
     border: 1px solid red;
     position: relative;
-}
+  }
 
-.slide {
+  .slide {
     position: absolute;
     top: 350px;
     right: 1vw;
-}
+  }
 
-
-.hidden {
+  .hidden {
     visibility: visible;
-}
+  }
 
-.mobileImage {
+  .hideForDesktop {
+    visibility: hidden;
+    height: 0;
+    width: 0;
+  }
+
+  #desktopLogo {
+    height: 100%;
+    width: auto;
+  }
+
+  .desktopNavLink {
+    width: fit-content;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.54px;
+  }
+
+  .desktopIcon:hover {
+    cursor: pointer;
+  }
+
+  .desktopSearchIcon {
+    margin-bottom: -2%;
+  }
+
+  .desktopCartIcon {
+    margin-bottom: -2%;
+  }
+
+  .desktopLangIcon {
+    position: relative;
+    top: 43px;
+  }
+
+  .langImg {
+    height: 100%;
+    width: auto;
+  }
+
+  .mobileImage {
     visibility: hidden;
     width: 0px;
     height: 0px;
+  }
 }
-
-}
-
-
