--- a/style.css
+++ b/style.css
@@ -482,7 +482,9 @@ footer form {
 
   nav a:hover {
     cursor: pointer;
-    text-decoration: underline;
+    /* text-decoration: underline; */
+    scale: 1.3;
+    transform: translateY(-4px);
   }
 
   .imgButtons {
