--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
   margin: 0px;
   max-width: 576px;
@@ -7,8 +8,10 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-color: black;
   font-family: "IBM", Arial, Helvetica, sans-serif;
 }
+
 
 header {
   display: flex;
@@ -19,7 +22,7 @@ header {
   margin-bottom: 10%;
   max-width: 576px;
   width: 100vw;
-  height: 123px;
+  height: 90px;
   background-color: transparent;
   position: fixed;
   z-index: 2;
@@ -27,7 +30,7 @@ header {
 }
 
 nav {
-  margin-top: -50px;
+  margin-top: 0px;
   text-align: center;
   max-width: 576px;
   width: 90vw;
@@ -40,6 +43,7 @@ nav {
 nav a {
   margin: 0px 3%;
   margin-top: -17.5px;
+  color: white;
 }
 
 .hidden {
@@ -57,7 +61,7 @@ nav a {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  top: 75px;
+  top: 90px;
   left: 0vw;
   width: 65vw;
   height: 800px;
@@ -128,18 +132,25 @@ nav a {
   font-size: 24px;
   font-weight: 300;
 }
-
+#ham
 #mailh1 {
   margin-top: 35px;
   margin-bottom: 35px;
   width: 85vw;
 }
 
+#mailh1 {
+  color: white;
+  width: 50%;
+  margin-top: 50px;
+  margin-bottom: 30px;
+}
+
 .mobileImage button {
   border: none;
 }
 
-#borderButton {
+.borderButton {
   padding: 8px 20px;
   font-size: 16px;
 }
@@ -150,19 +161,26 @@ nav a {
   color: white;
 }
 
+#läsMer {
+  background-color: transparent;
+  border: 1px solid black;
+}
+
 #firstImageFooter {
   height: 69px;
-  background-color: white;
+  background-color: black;
+  color: white;
   display: flex;
   flex-direction: row;
   align-items: center;
+  width: inherit;
+  max-width: inherit;
   justify-content: space-evenly;
 }
 
 #firstImageFooter img {
   width: 36px;
 }
-
 #firstImageFooter div {
   width: 25vw;
   font-size: 12px;
@@ -247,6 +265,35 @@ nav a {
   visibility: visible;
 }
 
+#neckLace {
+  width: inherit;
+  max-width: inherit;
+  display: flex;
+  justify-content:space-around;
+  align-items: center;
+  flex-direction: column;
+  height: 518px;
+  background-image: url("images/kort-halsband.svg");
+  background-size: cover;
+
+}
+
+#neckLace h3 {
+  width: 70%;
+  color: white;
+  margin-top: -50px;
+}
+
+#preOrder {
+  margin-bottom: -100px;
+  color: white;
+  background-color: black;
+  width: fit-content;
+  font-size: 16px;
+  padding: 20px 20px;
+  border: none;
+}
+
 @font-face {
   font-family: "IBM";
   src: url("fonts/IBM/IBMPlexSans-Regular.eot");
@@ -262,6 +309,8 @@ nav a {
 
 #productName {
   margin-top: 100px;
+   visibility: visible;
+   color: white;
 }
 
 a {
@@ -283,7 +332,7 @@ a {
   align-items: flex-start;
   justify-content: center;
   text-align: left;
-  background-image: url("images/poster.svg");
+  background-image: url("images/helheader.svg");
   background-size: 100vw;
   font-size: 16px;
 }
@@ -371,21 +420,23 @@ input {
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
+  background-color: white;
 }
 
 #phones {
   height: 458px;
   margin-top: -54px;
-  margin-bottom: -150px;
+  margin-bottom: -120px;
 }
 
 #downloadApp h3 {
+  text-align: left;
   font-size: 20px;
   font-weight: 500;
 }
 #downloadApp p {
   text-align: left;
-  width: 90vw;
+  width: 70vw;
   font-size: 16px;
   font-weight: 500;
 }
@@ -409,7 +460,7 @@ footer {
   color: white;
   width: inherit;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   align-items: center;
   text-align: left;
   padding-bottom: 10%;
@@ -437,7 +488,7 @@ footer form {
   grid-column-start: 2;
   grid-column-end: 3;
   grid-row-start: 1;
-  width: 250px;
+  width: fit-content;
 }
 
 #left p {
@@ -486,7 +537,31 @@ footer form {
   visibility: hidden;
 }
 
+#läsMer:hover {
+  background-color: white;
+}
+
+#prem:hover {
+  background-color: white;
+  color: black;
+}
+
 @media screen and (min-width: 576px) {
+
+  #phones {
+    margin-left: 0vw;
+  }
+
+  #neckLace {
+    height: 0px;
+  }
+
+  .readMore {
+    background-color: black;
+    color: white;
+    border: none;
+  }
+
   body {
     max-width: 1440px;
     width: 100vw;
@@ -495,12 +570,12 @@ footer form {
   }
 
   nav {
-    margin-top: 15px;
+    margin-top: -10px;
     max-width: 1440px;
     width: 90vw;
   }
 
-  #middle {
+  #middle, #hamburgerMenu a, #hamburgerMenu img {
     visibility: hidden;
   }
 
@@ -531,8 +606,8 @@ footer form {
     margin-top: -200px;
     max-width: inherit;
     width: inherit;
-    max-height: 900px;
-    background-image: url("images/hero.svg");
+    
+    background-image: url("images/herobild.svg");
     background-size: cover;
     margin-bottom: 0px;
   }
@@ -561,6 +636,8 @@ footer form {
     height: 700px;
     position: relative;
     margin-top: -40vh;
+    margin-bottom: -28vh;
+  
   }
 
   /*.slide {
@@ -584,7 +661,7 @@ footer form {
     top: 37.5%;
 }
 
-.imgDiv #borderButton {
+.imgDiv .borderButton {
     position: absolute;
     top: 445px;
 }
@@ -686,13 +763,14 @@ footer form {
 
   footer {
     position: relative;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 
   #bottomLogo {
     position: absolute;
     right: 2vw;
     bottom: 10px;
-    visibility: visible;
+    display: flex;
     width: 100px;
     height: 100px;
   }
@@ -700,6 +778,10 @@ footer form {
 
 
 @media screen and (min-width: 800px) {
+
+  #newsLetter {
+    height: 800px;
+  }
 
   .downloadAppTextIcons p {
     max-width: 50vw;
@@ -714,6 +796,8 @@ footer form {
 
   .imgDiv{
       margin-top: -30vh;
+      margin-bottom: -15vh;
+  
   } 
 
   .imgDiv .imgName {
@@ -723,12 +807,17 @@ footer form {
   .imgDiv .imgText {
       top: 35%;
   }
-  .imgDiv #borderButton {
+  .imgDiv .borderButton {
       top: 71%;
   }
 }
 
+
 @media screen and (min-width: 1100px) {
+
+  #newsLetter {
+    height: 1000px;
+  }
 
   #middle {
     visibility: visible;
@@ -737,6 +826,7 @@ footer form {
 
   .imgDiv{
       margin-top: -20vh;
+      margin-bottom: 0vh;
   } 
 
   .imgDiv .imgName {
@@ -747,9 +837,34 @@ footer form {
       top: 30%;
   }
   
-  .imgDiv #borderButton {
+  .imgDiv .borderButton {
       top: 81%;
   }
+
+  #mailh1 {
+    width: 40%;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  body {
+    width: 100vw;
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+  }
+
+  header, nav, .imgButtons {
+    width: 100vw;
+    max-width: 100vw;
+  }
+
+  nav {
+    padding: 0vw 5%;
+  }
+
 }
 
 @media screen and (max-width: 750px) {
