Fixed button in necklace div

--- a/style.css
+++ b/style.css
@@ -285,7 +285,7 @@ nav a {
 }
 
 #preOrder {
-  margin-bottom: -100px;
+  margin-bottom: -5vh;
   color: white;
   background-color: black;
   width: fit-content;
